--- a/README
+++ b/README
@@ -7,7 +7,7 @@ Plathome:
  * unix-like terminal by Solaris, Linux, Cygwin, Mac OS X, ...
 
 Require:
- * python 2.4.6
+ * python 2.x (3.x?)
    (import curses)
 
 Play:
